fix: top logo line position align

--- a/src/components/loading/loading.component.scss
+++ b/src/components/loading/loading.component.scss
@@ -81,10 +81,10 @@
         }
 
         &--4 {
-            left: 52px;
+            left: 50px;
             transform: rotate(114deg);
             height: 72px;
-            top: -9px;
+            top: -10px;
 
             &::after {
                 animation-delay: 3s, 4s;
